syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Dashboard.Shared.GrpcProto";

package TelemetryData;

service TelemetryData {
  // Test Method
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Starts telemetry service
  rpc StartTelemetry (google.protobuf.Empty) returns (Reply);
  // Stop telemetry service
  rpc StopTelemetry(google.protobuf.Empty) returns (Reply);
  // Restarts telemetry service
  rpc RestartTelemetry(google.protobuf.Empty) returns (Reply);
  // Opens telemetry data stream
  rpc OpenTelemetryStream(google.protobuf.Empty) returns (stream Data);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Reply {
  string message = 1;
}

message Data {
    string parameter = 1;
    string unit = 2;
    string value = 3;
}

